syntax = "proto3";

package clutch.config.service.envoyadmin.v1;

option go_package = "github.com/lyft/clutch/backend/api/config/service/envoyadmin/v1;envoyadminv1";

import "validate/validate.proto";

message Config {
  bool secure = 1 [ (validate.rules).bool.const = false ];

  // port value used for a remote host when one isn't specified
  uint32 default_remote_port = 2 [ (validate.rules).uint32 = {lte : 65535} ];
}
